apps/makotogotchi/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: makotogotchi
  namespace: makotogotchi
spec:
  type: ClusterIP
  selector:
    app: makotogotchi
  ports:
    - name: http
      port: 3000
      protocol: TCP
